@@ -18,8 +18,8 @@ class auditd::service (
   service { $::auditd::service_name:
     ensure     => $ensure,
     enable     => $enable,
-    hasrestart => true,
-    hasstatus  => true,
-    provider   => 'redhat'
+    start      => "/sbin/service ${auditd::service_name} start",
+    stop       => "/sbin/service ${auditd::service_name} stop",
+    restart    => "/sbin/service ${auditd::service_name} restart"
   }
 }
